# Test-shared

./: .gitignore  README.md  pyproject.toml
common/product_repository/: product_repository.py  pyproject.toml
common/user_repository/: pyproject.toml  requirements.txt
examples/: dataframe.py  product_repository.py
shared/dataframes/: __init__.py  main.py  pyproject.toml
shared/product_repository/: pyproject.toml
shared/user_repository/: pyproject.toml  user_repository.py
